# embedded-ramen

./: Cargo.toml  conv.sh  memory.x
.cargo/: config.toml
src/: blinky.rs  main.rs  platform.rs  terminal.rs  usb.rs
