[package]
name = "rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
# Embassy RTOS
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-98304",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

# Embassy RTOS (Optional)
embassy-usb = { version = "0.2.0", optional = true, features = ["defmt"] }

# Embassy RP2040 HAL
embassy-rp = { version = "0.1.0", optional = true, features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

# Cortex-M Support
cortex-m = { version = "0.7.6", optional = true, features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.0", optional = true }

# Core Utilities
defmt = "0.3" # Deferred logging
static_cell = "2" # Static memory allocation
critical-section = "1.1" # Provides the Critical Section Interface
panic-probe = { version = "0.3", features = ["print-defmt"] } # Die better
portable-atomic = { version = "1.7", features = [
    "critical-section",
] } # Atomic integers, CAS

# Logging
defmt-rtt = { version = "0.4", optional = true }


[features]
default = ["usb", "log-rtt", "blinky", "rp2040"]

# Logging
log-rtt = ["dep:defmt-rtt"]

# USB
usb = ["dep:embassy-usb"]

# Status LED
blinky = []

# Boards
rp2040 = ["dep:embassy-rp", "arch-cortex-m"]
arch-cortex-m = [
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "embassy-executor/arch-cortex-m",
]
